# diffie-hellman_key_exchange

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: dhm_drbg.h  diffie-hellman.h  number_gen.h
lib/: CMakeLists.txt  dhm_drbg.c  diffie-hellman.c  number_gen.c
src/: CMakeLists.txt  main.c
src/diffie-hellman/: main.c
